<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">
    
    <TextView
        android:layout_width="fill_parent"
    android:layout_margin="5dip" 
    android:textSize="20dip" 
    android:gravity="center" 
    android:layout_height="wrap_content" 
    android:text="@string/proper_title"
    />
<ToggleButton android:layout_height="0dp" 
    android:layout_gravity="center" 
    android:id="@+id/active_button" 
    android:layout_width="118dp" 
    android:layout_weight="0.09" 
    android:textOn="@string/active" 
    android:textOff="@string/inactive" 
    android:layout_marginTop="60dip">
</ToggleButton>

</LinearLayout>

